--- a/web/empresa_novo.xhtml
+++ b/web/empresa_novo.xhtml
@@ -28,7 +28,7 @@
                                 <h:outputText value="Empresa:" />
                             </b:column>
                             <b:column medium-screen="4">
-                                <b:inputText placeholder="Empresa" id="username" value="#{empresaController.novaEmpresa.empresa}"
+                                <b:inputText placeholder="Empresa" id="username" value="#{empresaController.empresa.empresa}"
                                              autocomplete="false" required="true">
                                     
                                 </b:inputText>
@@ -42,7 +42,7 @@
                                 <h:outputText value="CNPJ:" />
                             </b:column>
                             <b:column medium-screen="4">
-                                <b:inputText placeholder="Cnpj" id="cnpj" value="#{empresaController.novaEmpresa.cnpj}"
+                                <b:inputText placeholder="Cnpj" id="cnpj" value="#{empresaController.empresa.cnpj}"
                                              autocomplete="false" required="true">
                                     
                                 </b:inputText>
