Finalizado CRUD Usuario Empresa Grupo Subgrupo

--- a/web/empresa_editar.xhtml
+++ b/web/empresa_editar.xhtml
@@ -22,7 +22,7 @@
             <b:column span="10">
                 <b:form id="novaEmpresaForm">
                     
-                    <b:panel title="Nova empresa" look="primary">
+                    <b:panel title="Editar empresa" look="primary">
                         <b:row>
                             <b:column medium-screen="2">
                                 <h:outputText value="Empresa:" />
