--- a/web/grupo.xhtml
+++ b/web/grupo.xhtml
@@ -20,7 +20,7 @@
             </b:column>
              
             <b:column span="10">
-                <h2>Empresas</h2>
+                <h2>Grupos</h2>
                 <h:form id="formPrincipal">
                     <b:dataTable id="tabela" value="#{grupoController.listarGrupo()}" var="grupo">
                         
