--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -9,23 +9,32 @@
             <b:listLinks>
                 <b:navLink header="EMPRESA" />
                 <b:navLink href="empresa.jsf" value="Empresa"
-                           icon="globe" iconAlign="left"/>
+                           icon="glyphicon glyphicon-briefcase" iconAlign="left"/>
                 <b:navLink href="empresa_novo.jsf" value="Nova empresa"
-                           icon="globe" iconAlign="left"/>
+                           icon="glyphicon glyphicon-briefcase" iconAlign="left"/>
                 <b:navLink></b:navLink><br/>
 
                 <b:navLink header="USUÁRIO" />
                 <b:navLink href="usuario.jsf" value="Usuario"
-                           icon="globe" iconAlign="left"/>
+                           icon="glyphicon glyphicon-user" iconAlign="left"/>
+                <b:navLink href="usuario_novo.jsf" value="Novo usuario"
+                           icon="glyphicon glyphicon-user" iconAlign="left"/>
+                <b:navLink></b:navLink><br/>
+                
+                <b:navLink header="RELÁTORIO" />
+                <b:navLink href="relatorio.jsf" value="Relátorio"
+                           icon="glyphicon glyphicon-user" iconAlign="left"/>
                 <b:navLink></b:navLink><br/>
 
                 <b:navLink header="CONTABILIDADE" />
                 <b:navLink href="grupo.jsf" value="Grupos"
-                           icon="globe" iconAlign="left"/>
+                           icon="glyphicon glyphicon-book" iconAlign="left"/>
                 <b:navLink href="subgrupo.jsf" value="Subgrupos"
-                           icon="globe" iconAlign="left"/>
+                           icon="glyphicon glyphicon-book" iconAlign="left"/>
+                <b:navLink href="subgrupo_novo.jsf" value="Novo subgrupos"
+                           icon="glyphicon glyphicon-book" iconAlign="left"/>
                 <b:navLink href="balanco.jsf" value="Balanço"
-                           icon="globe" iconAlign="left"/>
+                           icon="glyphicon glyphicon-book" iconAlign="left"/>
                 <b:navLink></b:navLink><br/>
 
             </b:listLinks>
